Fix list marker paint invalidation on move

BUG=655941
TEST=paint/invalidation/list-marker-move.html

Review-Url: https://codereview.chromium.org/2428963002
Cr-Commit-Position: refs/heads/master@{#426074}

Former-commit-id: 5ab22dff550158922f4a443d86cf993ac46348f8